# aisplanner

./: .gitignore  ais_decode_test.py  ais_decoder.py  config.cfg  pyproject.toml
aisgail/: main.py  nets.py  utils.py
aisgail/config/: ais-ex.yaml
aisplanner/: __init__.py  __main__.py  misc.py
aisplanner/dataprep/: __init__.py  _file_descriptors.py  ais_decoder.py  mergemsg5.py  preppipeline.py  rmnull.py  standardize_header_msg5.py
aisplanner/encounters/: __init__.py  _locdb.py  encmap.py  filter.py  main.py  plotter.py  run.py  sieve.py  tests.py  tplot.py  utils.py
aisplanner/tread/: __init__.py  _tread.py  route_selector.py  tread.py
aisstats/: descriptive_plotting.py  descriptives.py  errchecker.py  main.py  plotting.py  psd.py  psd_plotting.py  quant_plotter_comp.py  sh_ecdf.py  shiptypes.py  taurusplot.py
aisstats/hpc/: b_3d_avg_cmplx.py  b_3d_avg_cmplx_zoom.py  b_3d_rej_rate.py  b_avg_cmplx.py  b_avg_cvh.py  b_avg_sd.py  b_avg_smthness_quants.py  b_base_stations.py  b_convex_hull.py  b_cum_ecdf.py  b_descriptives.py  b_ecdf.py  b_ecdf_lengths.py  b_ecdf_ship_type.py  b_ecdf_short.py  b_heatmap.py  b_large_speed_sd_routes.py  b_len_vs_nmsg.py  b_length_hist.py  b_mapster copy.py  b_mapster.py  b_mapster_tugtow.py  b_monthly_ecdf.py  b_quantile_comparator.py  b_quantile_comparator_days.py  b_quantile_comparator_days_speed.py  b_quantile_comparator_speed.py  b_quants.py  b_routes.py  b_sd_vs_rr.py  b_sdiff_hist.py  b_ship_types.py  b_simple_routes.py  b_speed_and_heading.py  (+6 more)
preprocessing/: mergemsg5.py  rmnull.py  standardize_header_msg5.py
(+5 files in other folders)
